--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
 </head>
 
 <body>
-  <!-- your content here... -->
-  <script src="js/scripts.js"></script>
+    <h1>HTML Dummy Page</h1>
+    <hr>
+    
+    (I acknowledge Microsoft for use of their image to illustrate the BACKGROUND attribute on the BODY tag.)
+    <br><br>
+    <br><br>
+    
+    <!--Headings--><H3>Headings</H3>
+    <H1>Level 1 Head</H1>
+    <H2>Level 2 Head</H2>
+    <H3>Level 3 Head</H3>
+    <H4>Level 4 Head</H4>
+    <H5>Level 5 Head</H5>
+    <H6>Level 6 Head</H6>
+  <script src="scripts.js"></script>
 </body>
 </html>
