--- a/index.html
+++ b/index.html
@@ -6,28 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>A Basic HTML5 Template</title>
-  <meta name="description" content="A simple HTML5 Template for new projects.">
+  <meta name="description" content="A simple look at using github pages.">
   <meta name="author" content="SitePoint">
 
-  <meta property="og:title" content="A Basic HTML5 Template">
+  <meta property="og:title" content="Github pages with javascript and css">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
   <meta property="og:description" content="A simple HTML5 Template for new projects.">
-  <meta property="og:image" content="image.png">
+ 
 
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="css/styles.css?v=1.0"></link>
 
 </head>
 
 <body>
-    <h1>HTML Dummy Page</h1>
+    <h1>Git hub pages example</h1>
     <hr>
-    
-    (I acknowledge Microsoft for use of their image to illustrate the BACKGROUND attribute on the BODY tag.)
     <br><br>
     <br><br>
     
@@ -38,6 +31,8 @@
     <H4>Level 4 Head</H4>
     <H5>Level 5 Head</H5>
     <H6>Level 6 Head</H6>
-  <script src="scripts.js"></script>
+    <button type="button" id = "button_1">Click Me to test the popup</button>
+
+  <script src="script.js"></script>
 </body>
-</html>
+</html> 
